# AMSO

./: .license_hearder.txt  .readthedocs.yaml  CMakeLists.txt  README.md  pyproject.toml
.trunk/: trunk.yaml
include/: logger.h  platform_status.cuh  platform_status.h
python/: CMakeLists.txt  pybind_module.cpp
python/soma/: __init__.py
src/: CMakeLists.txt  logger.cpp  platform_status.cpp  platform_status.cu
tests/: CMakeLists.txt  test_logger.cpp
